Fixed login page not showing up

--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 @import 'https://fonts.googleapis.com/css?family=Roboto+Slab:300,700';
+h3{
+      color: black;
+    font-family: 'Roboto Slab', serif;
+    font-weight: 700;
+}
+
+label{
+    text-align: left;
+}
 
 h1{
     color: black;
@@ -8,6 +17,11 @@ h1{
 
 }
 
+#loginCard{
+    display: inline-block;
+    padding: 32px 48px 0px 48px;
+    border: 1px solid #EEE;
+}
 
 .search h1{
     font-size: 3rem;
